# docsearch-mcp

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
src/docsearch/: __init__.py  chunker.py  cli.py  db.py  embedding.py  models.py  server.py  utils.py
tests/: test_chunker.py  test_cli_index.py  test_cli_search.py  test_cli_serve.py  test_db.py  test_embedding.py  test_example.py  test_server.py  test_utils.py
tests/fixtures/: sample.md  sample2.md
