[project]
name = "docsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Klassen", email = "davidklassen@proton.me" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
docsearch = "docsearch:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.14"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
