[project]
name = "docsearch"
version = "0.1.0"
description = "Semantic search over documentation via MCP"
readme = "README.md"
authors = [
    { name = "David Klassen", email = "davidklassen@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "mcp>=1.25.0",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
docsearch = "docsearch:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
